scripts/simple_cluster_config/apps/devtron/devtron_ingress-devtron.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/app-root: /dashboard
  labels:
    app: devtron
    release: devtron
  name: devtron-ingress
  namespace: devtroncd
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: devtron-service
            port:
              number: 80
        path: /orchestrator
        pathType: Prefix
      - backend:
          service:
            name: devtron-service
            port:
              number: 80
        path: /dashboard
        pathType: Prefix
      - backend:
          service:
            name: devtron-service
            port:
              number: 80
        path: /grafana
        pathType: Prefix
