scripts/simple_cluster_config/apps/devtron/devtron_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
  name: devtron
  namespace: devtroncd
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devtron.westie.dev.to
    secretName: devtron-ingress-tls
  rules:
    - host: devtron.westie.dev.to
      http:
        paths:
        - path: /orchestrator
          pathType: Prefix
          backend:
            service:
              name: devtron-service
              port: 
                number: 80

        - path: /dashboard
          pathType: Prefix
          backend:
            service:
              name: devtron-service
              port: 
                number: 80
